<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="15dp"
    app:layout_goneMarginBottom="20dp"
...
            android:layout_marginBottom="10dp"
            android:background="#37D7ED"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/TittleBar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ellipsize="end"
                android:hint="Tittle"
                android:padding="10dp"
                android:singleLine="true"
                android:text="vvvirir3hvbijwnihbvefdnwc fehejdwojfeiheijdwokjefihjwkofjekwjfijwkcefhjiwdefhwijhfwdjcfhdfd"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/updateBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#37D7ED"
                android:src="@drawable/baseline_edit_24" />

            <ImageButton
                android:id="@+id/deletebtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="#37D7ED"
                android:src="@drawable/baseline_delete_outline_24" />


...
