...


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mr. Notes"
        android:id="@+id/Notes"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="#FBFBFB"
        android:textSize="25dp"
        android:gravity="center_horizontal"/>

    <ProgressBar
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/Notes"
        android:indeterminateTint="#FFFFFF"
        android:layout_marginTop="18dp"
        android:id="@+id/Bar"
        android:foregroundGravity="center_horizontal" />


</LinearLayout>
